--- a/style/1920x1080.css
+++ b/style/1920x1080.css
@@ -1180,6 +1180,9 @@
   .form4 {
     display: none;
   }
+  .formvert {
+    display: none;
+  }
   .form2 {
     position: absolute;
     top: 0px;
