--- a/style/1920x1080.css
+++ b/style/1920x1080.css
@@ -1183,6 +1183,9 @@
   .formvert {
     display: none;
   }
+  .formvert2 {
+    display: none;
+  }
   .form2 {
     position: absolute;
     top: 0px;
